--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="share">
         <a href="https://www.hackerrank.com/" class="fab fa-hackerrank"></a>
         <a href="#"  class="fab fa-github"></a>
-        <a href="vermainfo95@gmail.com"  class="fas fa-envelope-open-text"></a>
+        <a href="mailto:vermainfo95@gmail.com"  class="fas fa-envelope-open-text"></a>
         <a href="https://www.linkedin.com/in/dhiraj-kumar-verma-463000133" class="fab fa-linkedin"></a>
         <a href="#" class="fab fa-pinterest"></a>
     </div>
