--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     </div>
 
     <div class="share">
+        
         <a href="https://wa.me/+919837860539" class="fab fa-whatsapp" > </a>
         <a href="https://github.com/DhirajVerma95"  class="fab fa-github"></a>
         <a href="mailto:vermainfo95@gmail.com"  class="fas fa-envelope-open-text"></a>
@@ -252,14 +253,16 @@
 
 <section class="portfolio" id="portfolio">
 
-    <h1 class="heading"> my <span>portfolio</span> </h1>
+    <h1 class="heading"> my <span>Projects</span> </h1>
 
     <div class="box-container">
 
         <div class="box">
             <img src="image/img-1.jpg" alt="">
             <div class="content">
-                <h3>Doctor Appoinment Booking </h3>
+                <h1>Doctor Appoinment Booking </h1>
+                <a href="https://github.com/DhirajVerma95/Hospital" > <button class="btn">Downlode Source Code</button> </a>
+                <a href="https://dhirajverma95.github.io/Hospital/" > <button class="btn">Go Live</button> </a>
             </div>
         </div>
 
