--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <a href="#about">about</a>
         <a href="#services">services</a>
         <a href="#education"> Education</a>
-        <a href="#portfolio">portfolio</a>
+        <a href="#portfolio">Projects</a>
         <a href="#contact">contact</a>
     </nav>
 
