--- a/index.html
+++ b/index.html
@@ -280,16 +280,18 @@
         <div class="box">
             <img src="image/img-2.jpg" alt="">
             <div class="content">
-                <h1>Metro Card Design</h1>
-                <a href="https://github.com/DhirajVerma95/Metro_card-Design" > <button class="btn">Downlode Source Code</button> </a>
-                <a href="https://dhirajverma95.github.io/Metro_card-Design/" > <button class="btn">Go Live</button> </a>
+                <h1>E-Shopping</h1>
+                <a href="https://github.com/DhirajVerma95/E-Shopping" > <button class="btn">Downlode Source Code</button> </a>
+                <a href="https://dhirajverma95.github.io/E-Shopping/" > <button class="btn">Go Live</button> </a>
             </div>
         </div>
 
         <div class="box">
             <img src="image/img-3.jpg" alt="">
             <div class="content">
-                <h3>project 03</h3>
+                <h1>Metro Card Design</h1>
+                <a href="https://github.com/DhirajVerma95/Metro_card-Design" > <button class="btn">Downlode Source Code</button> </a>
+                <a href="https://dhirajverma95.github.io/Metro_card-Design/" > <button class="btn">Go Live</button> </a>
             </div>
         </div>
 
