--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <h1>My Name is </h1>
         <h3>Dhiraj Kumar Verma</h3>
         <p>I am a <span id="ani1" style="color: indianred;"></span></p>
-        <a href="file/Dhiarj's Resume 95.pdf" download="Dhiraj CV"> <button class="btn">Downlode CV</button> </a>
+        <a href="file/Dhiarj's Resume 0322.pdf" download="Dhiraj CV"> <button class="btn">Downlode CV</button> </a>
         
     </div>
 
@@ -124,8 +124,8 @@
         </div>
 
         <div class="content">
-            <p id="Objective"> Building quality websites and Window applications with HTML, CSS, and JavaScript .Net Framework
-                Web developer and designer with 2+ years’ of well-rounded experience in development, object-oriented
+            <p id="Objective"> Building quality websites and Window applications with ReactJS, JavaScript, HTML, CSS and Bootstrap
+                Web developer and designer with 2+ year's of well-rounded experience in development, object-oriented
                 and user-centered design, seeks a position with a top technology firm. Key skills include
                 Proficient in HTML, CSS, Java Script, Java , .Net Framework and SQL Server-2019</p>
             <a href="#" class="btn">contact me</a>
@@ -138,7 +138,7 @@
         <div class="progress">
             <h3> Web Design <span>90%</span> </h3>
             <div class="bar bar-1-1"><span></span></div>
-            <h3> React JS  <span>40%</span> </h3>
+            <h3> React JS  <span>60%</span> </h3>
             <div class="bar bar-2-3"><span></span></div>
             <h3> UI/UX design <span>80%</span> </h3>
             <div class="bar bar-1-3"><span></span></div>
@@ -149,8 +149,8 @@
             <div class="bar bar-2-1"><span></span></div>
             <h3> CSS <span>80%</span> </h3>
             <div class="bar bar-2-2"><span></span></div>
-            <h3> JavaScript <span>65%</span> </h3>
-            <div class="bar bar-2-3"><span></span></div>
+            <h3> JavaScript <span>80%</span> </h3>
+            <div class="bar bar-2-2"><span></span></div>
         </div>
 
     </div>
@@ -308,12 +308,11 @@
         </div>
 
         <div class="box">
-            <img src="image/img-3.jpg" alt="">
+            <img src="image/dashboard.jpg" alt="">
             <div class="content">
-                <h1>Metro Card Design</h1>
-                <a href="https://github.com/DhirajVerma95/Metro_card-Design" > <button class="btn">Downlode Source Code</button> </a>
-                <a href="https://dhirajverma95.github.io/Metro_card-Design/" > <button class="btn">Go Live</button> </a>
-                <h1>HTML5 and CSS</h1>
+                <h1>Dashboard</h1>
+                <a href="https://dashboarddk.netlify.app/" > <button class="btn">Go Live</button> </a>
+                <h1>ReactJS, Rchart & React Router</h1>
             </div>
         </div>
 
@@ -327,6 +326,7 @@
             </div>
         </div>
         <div class="box">
+
             <img src="image/JSTest.jpg" alt="">
             <div class="content">
                 <a href="https://app.testdome.com/cert/e13a4836582a45aa8144048ce0714f7e" class="testdome-certificate-stamp gold">
